[gd_scene load_steps=14 format=3 uid="uid://brgsblmde6x0b"]

[ext_resource type="Texture2D" uid="uid://bv0bfjedgyum7" path="res://art/wizard/Idle.png" id="1_sfpap"]
[ext_resource type="Script" uid="uid://cbghu6psc02v6" path="res://scripts/wizard.gd" id="1_tj1jt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xi6gy"]
atlas = ExtResource("1_sfpap")
region = Rect2(107, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb0sj"]
atlas = ExtResource("1_sfpap")
region = Rect2(357, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghyx8"]
atlas = ExtResource("1_sfpap")
region = Rect2(607, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhll8"]
atlas = ExtResource("1_sfpap")
region = Rect2(857, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4jwj"]
atlas = ExtResource("1_sfpap")
region = Rect2(1107, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltpbi"]
atlas = ExtResource("1_sfpap")
region = Rect2(1357, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m30r"]
atlas = ExtResource("1_sfpap")
region = Rect2(1607, 60, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo3go"]
atlas = ExtResource("1_sfpap")
region = Rect2(1857, 60, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_kj73h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi6gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb0sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghyx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhll8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4jwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltpbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m30r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo3go")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4322y"]
size = Vector2(21, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_rwpao"]
radius = 53.037724

[node name="wizard" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_tj1jt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kj73h")
animation = &"idle"
frame_progress = 0.92187

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-48.5, 10)
shape = SubResource("RectangleShape2D_4322y")

[node name="chat_detection_area" type="Area2D" parent="."]
position = Vector2(-45, 18)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_rwpao")

[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="tree_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_tree_exited"]
